src/ndhm.scss
button {
    margin: 2px;
    padding: 3px 10px;
}
.verify-health-id, .auth-modes, .otp-verify, .patient-details, .qr-code-scanner, .alternative-text, .direct-auth, .demo-auth-form-field{
    display: flex;
    width: 100%;
    margin-top: 20px;
    margin-left: 25px;

    label {
        width: 50%;
    }

    .verify-health-id-input-btn, .auth-modes-select-btn ,  .otp-verify-input-btn{
        width: 50%;
    }

    .qr-code-scanner{
        text-align: center;
    }

    .fetch-patient {
        margin-left: 35%;
    }

    .verify-health-id-input, .auth-modes-select , .otp-verify-input{
        input, select {
            padding: 2px;
        }
        margin-bottom: 10px;
    }

    .direct-auth-note {
        margin-left: -60%;
    }

}

.demo-auth-form-field {
    input, select {
        padding: 2px;
    }

    .label:after {
        content:" *";
        color: red;
    }

    margin-bottom: 10px;
}

.error {
    margin-top: 10px;
    width: 100%;
    color: red;
}

.fetch-abdm-record {
    margin-top: 5%;
    margin-left: 35%;
    button {
        height: 30px;
    }
}

